@@ -27,6 +27,7 @@ x2gokdrive (0.0.0.1-0x2go1) UNRELEASED; urgency=medium
     - improve initialization of cursor frame and cache element structures.
     - improve clearing of the frame list.
     - reiniting of frame and cursors caches by client request.
+    - don't check cache data size, only amount of elements.
 
   [ Mihai Moldovan ]
   * Initial release:
